# llm-feature-gen

./: LICENSE  MANIFEST.in  README.md  batch.py  multiclass.py  pyproject.toml  requirements.txt  test.ipynb
.github/: CODEOWNERS
.github/workflows/: docs.yml  publish.yml
discover_tabular/: test.csv
outputs/: discovered_features.json  discovered_tabular_features.json  hotpot_feature_values.csv
src/LLM_feature_gen/: __init__.py  discover.py  generate.py
src/LLM_feature_gen/prompts/: __init__.py  discovery_prompt.txt  generation_prompt.txt
src/LLM_feature_gen/providers/: __init__.py  local_provider.py  openai_provider.py
src/LLM_feature_gen/utils/: image.py  video.py
src/llm_feature_gen/: discover.py  generate.py  sklearn_transformer.py
src/llm_feature_gen/prompts/: text_discovery_prompt.txt  text_generation_prompt.txt
src/tests/: test_batch_processing.py  test_discover_more.py  test_generalize_classes.py  test_generation.py  test_providers.py  test_sklearn_transformer.py
