[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_feature_gen"
version = "0.1.1"
description = "Feature discovery and generation utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Julija Jeršova" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "pillow>=9.0.0"
]

[tool.setuptools.package-data]
"LLM_feature_gen" = ["prompts/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["discover_images*", "outputs*"]
